@@ -10,6 +10,7 @@
 - invite status enum added
 - topic parents ids added
 - community CUDL resolvers added
+- get_shout resolver accepts slug or shout_id
 
 [0.4.4]
 - followers_stat removed for shout
